--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -95,43 +95,43 @@
     "metaTitle": "Sell your house | Inmobiliaria Núcleo",
     "metaDescription": "Sell your house | Inmobiliaria Núcleo",
     "form": {
-      "title": "Sell your house with us",
-      "subtitle": "Please, rellene el siguiente formulario para ponerse en contacto con el equipo de Núcleo",
+      "title": "Venda su inmueble con nosotros",
+      "subtitle": "Por favor, rellene el siguiente formulario para ponerse en contacto con el equipo de Núcleo",
       "subtitle2": "Valoración gratuita y sin compromiso",
-      "send": "Send",
-      "contactUs": "Contact us"
+      "send": "Enviar",
+      "contactUs": "Contacte con nosotros"
     },
     "why": {
       "title": "¿Por qué vender con nosotros?",
       "properties": {
         "professional": {
           "title": "Profesionalidad",
-          "description": "Desde Núcleo le ofrecemos un servicio completo y personal desde el inicio hasta el fin del proceso de venta"
+          "description": "Desde Núcleo le ofrecemos un servicio completo y personal desde el inicio hasta el final del proceso de venta"
         },
         "fast": {
           "title": "Rapidez",
-          "description": "Contamos con una red de 18.000 personas que buscan una nueva vivienda"
+          "description": "Contamos con una potente base de datos compartida entre nuestras oficinas y más de 30 asesores trabajando para vender su vivienda"
         },
         "experience": {
           "title": "Experiencia",
-          "description": "El equipo de profesionales de Núcleo conoce bien el mercado inmobiliario y cuenta profundos conocimientos especializados"
+          "description": "El equipo de profesionales de Núcleo conoce bien el mercado inmobiliario y cuenta con profundos conocimientos especializados"
         }
       }
     },
     "houseValue": {
       "title": "Conozca el valor de su inmueble", 
-      "subtitle": "Le ofrecemos un servicio gratuito de valoración de su inmueble",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+      "subtitle": "Servicio gratuito de valoración de su inmueble",
+      "description": "Gracias a nuestra experiencia en el sector inmobiliario local, conocemos los precios de venta reales de cada barrio.<br><br>Si a esto le sumamos el software más avanzado en gestión inmobiliaria, somos capaces de proponerle el precio adecuado para vender su vivienda.<br><br>Y lo mejor, todo ello de forma totalmente gratuita."
     },
     "idealBuyer": {
       "title": "Encontramos al comprador ideal", 
-      "subtitle": "Encontramos al comprador ideal",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+      "subtitle": "Plan de Marketing totalmente personalizado",
+      "description": "Contamos con cámaras de realidad virtual para que tu vivienda luzca como nunca en los principales portales inmobiliarios, tanto nacionales como internacionales.<br><br>También promocionaremos su vivienda en nuestras oficinas y nuestra revista mensual para darle la máxima visibilidad posible<br><br>Realizamos un análisis del perfil de todos los posibles compradores para encontrar los que más se ajustan a sus intereses en nuestra amplia base de datos."
     },
     "adjustNeeds": {
       "title": "Nos ajustamos a sus necesidades", 
-      "subtitle": "En Núcleo nuestros clientes son lo primero",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+      "subtitle": "Gestión integral, de principio a fin",
+      "description": "Realizamos un reportaje fotográfico (2D y 3D) y nos hacemos cargo de la publicación de los anuncios en todos los canales, tanto online como online.<br><br>Nos encargamos de todas las gestiones de documentación y le acompañamos a la notaría en el momento de la firma.<br><br>Durante todo proceso, si tiene cualquier consulta solo tiene que descolgar el teléfono y nuestros asesores estarán encantados de atenderle."
     }
   },
   "flatTypes": {
