--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -43,8 +43,8 @@
     "pictures": "Fotos"
   },
   "flatDetail": {
-    "title": "{{type}} en venta en {{address}}, {{city}}. - Inmobiliaria Núcleo",
-    "description": "{{type}} en venta por {{price}}€. {{rooms}} dormitorio/s, {{bathrooms}} baño/s, {{sqrMeters}} metros cuadrados en {{address}}, {{city}}",
+    "title": "{{type}} en venta en {{zone}}, {{city}}. - Inmobiliaria Núcleo",
+    "description": "{{type}} en venta por {{price}}€. {{rooms}} dormitorio/s, {{bathrooms}} baño/s, {{sqrMeters}} metros cuadrados en {{zone}}, {{city}}",
     "imageCarouselTitle": "{{type}} en {{zone}}",
     "messages": {
       "recommendedFlats": "También le puede interesar"
@@ -106,32 +106,32 @@
       "properties": {
         "professional": {
           "title": "Profesionalidad",
-          "description": "Desde Núcleo le ofrecemos un servicio completo y personal desde el inicio hasta el fin del proceso de venta"
+          "description": "Desde Núcleo le ofrecemos un servicio completo y personal desde el inicio hasta el final del proceso de venta"
         },
         "fast": {
           "title": "Rapidez",
-          "description": "Contamos con una red de 18.000 personas que buscan una nueva vivienda"
+          "description": "Contamos con una potente base de datos compartida entre nuestras oficinas y más de 30 asesores trabajando para vender su vivienda"
         },
         "experience": {
           "title": "Experiencia",
-          "description": "El equipo de profesionales de Núcleo conoce bien el mercado inmobiliario y cuenta profundos conocimientos especializados"
+          "description": "El equipo de profesionales de Núcleo conoce bien el mercado inmobiliario y cuenta con profundos conocimientos especializados"
         }
       }
     },
     "houseValue": {
       "title": "Conozca el valor de su inmueble", 
-      "subtitle": "Le ofrecemos un servicio gratuito de valoración de su inmueble",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+      "subtitle": "Servicio gratuito de valoración de su inmueble",
+      "description": "Gracias a nuestra experiencia en el sector inmobiliario local, conocemos los precios de venta reales de cada barrio.<br><br>Si a esto le sumamos el software más avanzado en gestión inmobiliaria, somos capaces de proponerle el precio adecuado para vender su vivienda.<br><br>Y lo mejor, todo ello de forma totalmente gratuita."
     },
     "idealBuyer": {
       "title": "Encontramos al comprador ideal", 
-      "subtitle": "Encontramos al comprador ideal",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+      "subtitle": "Plan de Marketing totalmente personalizado",
+      "description": "Contamos con cámaras de realidad virtual para que tu vivienda luzca como nunca en los principales portales inmobiliarios, tanto nacionales como internacionales.<br><br>También promocionaremos su vivienda en nuestras oficinas y nuestra revista mensual para darle la máxima visibilidad posible<br><br>Realizamos un análisis del perfil de todos los posibles compradores para encontrar los que más se ajustan a sus intereses en nuestra amplia base de datos."
     },
     "adjustNeeds": {
       "title": "Nos ajustamos a sus necesidades", 
-      "subtitle": "En Núcleo nuestros clientes son lo primero",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+      "subtitle": "Gestión integral, de principio a fin",
+      "description": "Realizamos un reportaje fotográfico (2D y 3D) y nos hacemos cargo de la publicación de los anuncios en todos los canales, tanto online como online.<br><br>Nos encargamos de todas las gestiones de documentación y le acompañamos a la notaría en el momento de la firma.<br><br>Durante todo proceso, si tiene cualquier consulta solo tiene que descolgar el teléfono y nuestros asesores estarán encantados de atenderle."
     }
   },
   "flatTypes": {
