--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -136,8 +136,8 @@
   },
   "aboutUs": {
     "title": "About us | Inmobiliaria Núcleo",
-    "description": "About us | Inmobiliaria Núcleo",
-    "section-1-title": "Real estate in Alicante with more than 10 years of experience. We help you to sell your property or to find the best houses for sale in Alicante",
+    "description": "Real estate in Alicante with more than 10 years of experience. We help you to sell your property or to find the best houses for sale in Alicante",
+    "section-1-title": "About us",
     "section-1-text": "Inmobiliaria Núcleo is a network of real estate agencies in Alicante with more than 10 years of experience in the sector.<br><br>Currently, Núcleo has 5 offices spread throughout the geography of the province of Alicante.<br><br>Our team has that young spirit with grace and initiative at the forefront of technology and at the same time has great training and experience in the real estate market.",
     "section-2-title": "Where we come from?",
     "section-2-text": "Formed by professionals from the real estate and technology sectors who have more than 10 years of experience. Our strategic point of view has always been oriented towards evolution and growth, towards the continuous adaptation that technology offers us.<br><br>Over time, we have left behind the traditional vision that we consider to be stagnant of real estate services, to focus on progressing and looking to the future.",
