--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -51,7 +51,7 @@
     },
     "actions": {
       "showAllPhotos": "Show all photos",
-      "requestInfo": "I am interested in this property"
+      "requestInfo": "I'm interested"
     }
   },
   "calefaccion": "Heating",
