changed meta description of contact page

--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -148,7 +148,7 @@
   },
   "contact": {
     "metaTitle": "Contact | Inmobiliaria Núcleo",
-    "metaDescription": "Contact | Inmobiliaria Núcleo",
+    "metaDescription": "Alicante Real Estate Inmobiliaria Núcleo contact information",
     "form": {
       "title": "Contact us",
       "subtitle": "Please, fill in the following form to get in touch with the Núcleo team",
