--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -148,7 +148,7 @@
   },
   "contact": {
     "metaTitle": "Contacto | Inmobiliaria Núcleo",
-    "metaDescription": "Contacto | Inmobiliaria Núcleo",
+    "metaDescription": "Toda la información de las oficinas inmobiliarias en Alicante de Núcleo",
     "form": {
       "title": "Contacte con nosotros",
       "subtitle": "Por favor, rellene el siguiente formulario para ponerse en contacto con el equipo de Núcleo",
