--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -10,20 +10,20 @@
 	"langCode": "es",
   "title": "Inmobiliaria en Alicante | Inmobiliaria Núcleo",
 	"home": {
-		"description": "Compra-Venta de viviendas en Alicante. Encuentra inmuebles al mejor precio. Visita Inmobiliaria Núcleo y conoce nuestra oferta de casas en venta en Alicante.",
+		"description": "Compra-Venta de viviendas en Alicante. Encuentre inmuebles al mejor precio. Visite Inmobiliaria Núcleo y conozca nuestra oferta de casas en venta en Alicante.",
     "newsletter-input-label": "introduzca su correo para suscribirse a la newsletter"
 },
   "hero-title-1": "Bienvenido a",
   "hero-title-2": "Inmobiliaria Núcleo",
-  "hero-subtitle": "Te asesoramos tanto con la venta como con la compra de inmuebles en Alicante.",
+  "hero-subtitle": "Le asesoramos tanto con la venta como con la compra de inmuebles en Alicante.",
   "comprar": "Comprar",
   "vender": "Vender casa",
   "section-flats-title": "Viviendas en Alicante",
   "enviar": "Enviar",
   "email": "Correo electrónico",
   "newsletter-title": "Suscríbase a nuestro boletín",
-  "blog-showcase-title": "Conoce las tendencias del mercado inmobiliario",
-  "blog-showcase-subtitle": "¡Sé el primero en conocer todas las novedades, los mejores rincones de Alicante y mucho más!",
+  "blog-showcase-title": "Conozca las tendencias del mercado inmobiliario",
+  "blog-showcase-subtitle": "¡Sea el primero en conocer todas las novedades, los mejores rincones de Alicante y mucho más!",
   "habitaciones": "habitaciones",
   "nucleo-sl": "© 2020 Núcleo S.L.",
   "aviso-legal": "Aviso legal",
